# LearningOpenCV

chap2/: CMakeLists.txt  CannyEdge.cpp  CannyEdge.h  Example2_1.cpp  Example2_1.h  Example2_3.cpp  Example2_3.h  PyrDown.cpp  PyrDown.h  main.cpp
chap9/: CMakeLists.txt  main.cpp
